--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>小明的个人简历</title>
+    <title>个人简历</title>
     <meta name="theme-color" content="#ffc91d"/>
     <link rel="icon" href="static/img/32.png" sizes="32x32"/>
     <link rel="icon" href="static/img/192.png" sizes="192x192"/>
@@ -14,14 +14,14 @@
 <body>
 <aside class="sidebar">
     <div class="avatar">
-        <img src="static/img/avatar.jpg" title="保罗酱"/>
+        <img src="static/img/avatar.jpg" title=""/>
     </div>
     <nav class="nav">
         <a href="#info">资料</a>
-        <a href="#skills">技能</a>
-        <a href="#works">作品</a>
+        <a href="#hobby">兴趣</a>
+        <a href="#certificates">荣誉</a>
         <a href="#story">经历</a>
-        <a href="#team">团队</a>
+        <a href="#Self-evaluation">评价</a>
     </nav>
 </aside>
 <main>
@@ -30,35 +30,37 @@
             <h2 class="title">个人资料</h2>
             <div class="row">
                 <div class="col-l-4">
-                    <p>姓名：小明</p>
+                    <p>姓名：冯少杰</p>
+                    <p>籍贯：山西省晋中市和顺县</p>
                     <p>性别：男</p>
-                    <p>年龄：17</p>
-                    <p>英文名：Paul</p>
-                    <p>学历：大专（高技）</p>
+                    <p>政治面貌：团员</p>
+                    <p>生日：1999年1月10日</p>
+                    <p>民族：汉</p>
+                    <p>学历：本科</p>
                 </div>
                 <div class="col-l-4">
-                    <p>QQ：1204958596</p>
-                    <p>GitHub：<a href="https://github.com/Dreamer-Paul">Dreamer-Paul</a></p>
-                    <p>博客：<a href="https://paugram.com">https://paugram.com</a></p>
-                    <p>邮箱：<a href="mailto:dreamer_paul@126.com">dreamer_paul@126.com</a></p>
+                    <p>QQ：773481353</p>
+                    <p>手机：18434186078</p>
+                    <p>网站：<a href="https://fsj.one">https://fsj.one</a></p>
+                    <p>邮箱：<a href="mailto:i@fsj.one">i@fsj.one</a></p>
                 </div>
                 <div class="col-l-4">
-                    <p>我是一个热爱钻研计算机技术的青少年，从小开始对计算机有极大的兴趣。目前我专注网站开发领域。我还自己发起建立了一个制作游戏的团队，希望能和大家合作，一同创造出属于我们自己的原创作品。</p>
+                    <p>人生伟业的建立，不在能知，乃在能行。</p>
                 </div>
             </div>
         </div>
     </section>
-    <section id="skills">
+    <section id="hobby">
         <div class="wrap">
-            <h2 class="title">掌握的技能</h2>
+            <h2 class="title">兴趣爱好</h2>
             <div class="row scrollable">
                 <div class="col-s-6 col-m-4 center-fixed">
                     <div class="skills-icon">
                         <i class="fa fa-html5"></i>
                     </div>
                     <div class="skills-title">
-                        <h3>HTML 5</h3>
-                        <p>熟悉 HTML5 网站的架构和开发</p>
+                        <h3>运动</h3>
+                        <p>热爱运动，喜欢爬山、健身，喜欢打羽毛球</p>
                     </div>
                 </div>
                 <div class="col-s-6 col-m-4 center-fixed">
@@ -66,8 +68,8 @@
                         <i class="fa fa-css3"></i>
                     </div>
                     <div class="skills-title">
-                        <h3>CSS3</h3>
-                        <p>熟悉使用 CSS3 写响应式网站、动画等</p>
+                        <h3>阅读</h3>
+                        <p>喜欢读书，课余时间会读各种各样的书</p>
                     </div>
                 </div>
                 <div class="col-s-6 col-m-4 center-fixed">
@@ -75,69 +77,41 @@
                         <i class="fa fa-code"></i>
                     </div>
                     <div class="skills-title">
-                        <h3>JavaScript</h3>
-                        <p>能使用 JS 制作简单的程序、交互与特效</p>
+                        <h3>交友</h3>
+                        <p>喜欢交朋友，有较好的人际关系</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section id="works">
+    <section id="certificates">
         <div class="wrap">
-            <h2 class="title">个人作品</h2>
+            <h2 class="title">荣誉奖项</h2>
             <div class="row">
                 <div class="col-s-6">
                     <div class="works-item">
-                        <img src="static/img/works/binkic-2017.jpg"/>
-                        <p>缤奇团队 2017 官网</p>
+                        <!---可插img--->
+                        <p>计算机二级（MS- office）</p>
                     </div>
                 </div>
                 <div class="col-s-6">
                     <div class="works-item">
-                        <img src="static/img/works/space.jpg"/>
-                        <p>个人博客</p>
+                        <p>大学英语四级（CET-4）</p>
                     </div>
                 </div>
                 <div class="col-s-6">
                     <div class="works-item">
-                        <img src="static/img/works/dream.jpg"/>
-                        <p>梦想主题班会</p>
+                        <p>普通话标准考试</p>
                     </div>
                 </div>
                 <div class="col-s-6">
                     <div class="works-item">
-                        <img src="static/img/works/kico-style.jpg"/>
-                        <p>Kico Style 响应式框架</p>
+                        <p>驾驶证C1证书</p>
                     </div>
                 </div>
                 <div class="col-s-6">
-                    <div class="works-item">
-                        <img src="static/img/works/robots.jpg"/>
-                        <p>小缤机器人</p>
-                    </div>
-                </div>
-                <div class="col-s-6">
-                    <div class="works-item">
-                        <img src="static/img/works/single.jpg"/>
-                        <p>Single 博客主题</p>
-                    </div>
-                </div>
-                <div class="col-s-6">
-                    <div class="works-item">
-                        <img src="static/img/works/kico-player.jpg"/>
-                        <p>Kico Player 播放器</p>
-                    </div>
-                </div>
-                <div class="col-s-6">
-                    <div class="works-item">
-                        <img src="static/img/works/sweet.jpg"/>
-                        <p>个人主页 Sweet</p>
-                    </div>
-                </div>
-                <div class="col-s-6">
-                    <div class="works-item">
-                        <img src="static/img/works/binkic-2018.jpg"/>
-                        <p>缤奇团队 2018 官网</p>
+                    <div class="works-item
+                        <p>实用新型专利证书</p>
                     </div>
                 </div>
             </div>
@@ -149,47 +123,34 @@
             <div class="row">
                 <div class="col-m-8">
                     <ul class="timeline">
-                        <li>2015.07.03：创立缤奇（Binkic）团队</li>
-                        <li>2015.12.20：仿照某动漫官网编写模板，并搭建运营了一个动漫型社区</li>
-                        <li>2016.05.30：带领团队进行招新，并发起了首个游戏项目：<a>色块冲刺</a></li>
-                        <li>2016.08.17：为团队制作了首部宣传片：<a href="https://www.bilibili.com/video/av14078749" target="_blank">创意可以改变什么</a></li>
-                        <li>2016.12.08：个人编写的前端响应式框架 <a href="https://kico.binkic.com/style" target="_blank">Kico Style</a> 初现雏形</li>
-                        <li>2017.03.01：基于 Kico Style 的第一个原创 <a href="https://www.binkic.com" target="_blank">缤奇团队官网</a> 正式上线</li>
-                        <li>2017.04.27：使用前端技术编写的 <a href="https://github.com/Dreamer-Paul/Meeting" target="_blank">梦想晨会</a> 制作完成</li>
-                        <li>2017.06.07：参加“众创杯”创业大赛校园选拔赛，团队项目荣获三等奖</li>
-                        <li>2017.06.17：动漫门户网站制作完成，内含一个自己设计的简单音乐播放器</li>
-                        <li>2017.06.25：参加全国中职信息技术技能大赛微网站项目，荣获一等奖</li>
-                        <li>2017.08.03：原创博客主题 <a href="https://github.com/Dreamer-Paul/Single" target="_blank">Single</a> 发布，截至 2 月共有 66 Stars</li>
-                        <li>2017.09.19：个人编写的播放器 <a href="https://kico.binkic.com/player" target="_blank">Kico Player</a> 发布测试版</li>
-                        <li>2017.12.12：基于 ES6 的时钟小工具 <a href="https://kico.binkic.com/tools" target="_blank">Kico Tools</a> 发布测试版</li>
-                        <li>2017.12.18：第一个基于 PHP 的个人首页 <a href="https://paul.gq" target="_blank">Sweet</a> 发布正式版</li>
-                        <li>2018.01.01：缤奇团队新<a href="https://www.binkic.com" target="_blank">官网</a>正式上线，后端采用 Typecho 驱动</li>
-                        <li>2018.02.16：结合前后端制作了一个春节的<a href="https://paugram.com/coding/css-red-packet.html" target="_blank">问答红包</a>，使用正则判断答案</li>
+                        <li>2018.7：<b>中北大学</b>金工实习 数控机床理论与实践，机械制造基础训练</li>
+                        <li>2019.4：<b>中北大学</b>电子工艺实习 学习电路板的焊接及线路分析，最终以优秀成绩完成对充电器的制作</li>
+                        <li>2020.6：<b>平朔煤矸石电厂</b> 进厂参观学习，了解基本电力系统的运行知识这次实习，加深了我对电厂及相关行业的了解，并对厂内设备有了一个初步的认识，使我熟悉了热能工程专业相关企业的主要热力系统、设备技术特点及布置，为工作奠定了必要的基础。</li>                     
                     </ul>
                 </div>
                 <div class="col-m-4 center-fixed">
-                    <img src="static/img/story.png"/>
+                                                 <!---可插story img--->
                 </div>
             </div>
         </div>
     </section>
-    <section class="content-d" id="team">
+    <section class="content-d" id="Self-evaluation">
         <div class="wrap">
-            <h2 class="title">我的团队</h2>
+            <h2 class="title">个人评价</h2>
             <div class="row">
                 <div class="col-m-6">
-                    <p>我的团队 - 缤奇团队由一群热爱科技创新的年轻人所组成，做到了“实际”与“创新”的结合。奇思妙想不乏真正落实。集思广益，生动有趣的创意，尽在缤奇。缤奇团队如今有超过30名成员，各个部门互帮互助，同为一个目标而努力进取着。</p>
-                    <p>缤奇团队致力于开发原创游戏、动漫等项目。目前我们已完成项目有手机游戏“色块冲刺”、聊天娱乐项目“小缤机器人”等。正在创作项目有解密游戏“月亮湖的秘密”、VR 项目“梦想码头”等。缤奇官网 &amp; 社区已陆续开放。网站采用团队成员自主编写的 CSS3 自适应框架，针对移动设备有布局优化，缤奇团队有着丰富的网站建设技术能力、有独立的画师以及文编。</p>
-                    <p>团队官网：<a href="https://www.binkic.com">https://www.binkic.com</a></p>
+                    <p>性格开朗，待人热情、诚恳，实事求是、责任心强，富有团队精神，勤奋好学，富有爱心，要求上进，敢于不断地挑战自我。办事积极认真，吃苦耐劳，注重理论和实践的结合。</p>
+                    <p>有较强的应变能力、学习和动手能力强，有集体主义精神，具备较强的抗压能力，能以最快的速度适应并融入新的环境。拥有较强的组织能力和适应能力、并具有较强的管理策划与组织管理协调能力。</p>
+                    <p>相信这些能力在未来的工作中会给我以很大的帮助。相信未来在工作中这些能力会让我如虎添翼。</p>
                 </div>
                 <div class="col-m-6 center">
-                    <img src="static/img/team.png"/>
+                    <img src=""/>
                 </div>
             </div>
         </div>
     </section>
     <footer>
-        <p>© 2018 By <a href="https://paugram.com" title="保罗的博客" target="_blank">Dreamer-Paul</a>.</p>
+        <p>© 2020 By <a href="https://fsj.one/" title="冯少杰简历网站" target="_blank">FSJ</a>.</p>
     </footer>
 </main>
 
