--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
             </div>
         </div>
     </section>
-    <section id="story">
+    <section class="content-d" id="story">
         <div class="wrap">
             <h2 class="title">个人经历</h2>
             <div class="row">
                 <div class="col-m-8">
                     <ul class="timeline">
-                        <li>2018.7：<b>中北大学</b>金工实习 数控机床理论与实践，机械制造基础训练</li>
-                        <li>2019.4：<b>中北大学</b>电子工艺实习 学习电路板的焊接及线路分析，最终以优秀成绩完成对充电器的制作</li>
-                        <li>2020.6：<b>平朔煤矸石电厂</b> 进厂参观学习，了解基本电力系统的运行知识这次实习，加深了我对电厂及相关行业的了解，并对厂内设备有了一个初步的认识，使我熟悉了热能工程专业相关企业的主要热力系统、设备技术特点及布置，为工作奠定了必要的基础。</li>                     
+                                        <li>2018.7：<b>中北大学</b> <a>金工实习</a> 数控机床理论与实践，机械制造基础训练</li>
+                                        <li>2019.4：<b>中北大学</b> <a>电子工艺实习</a> 学习电路板的焊接及线路分析，最终以优秀成绩完成对充电器的制作</li>
+                                        <li>2020.6：<b>平朔煤矸石电厂</b> <a>进厂参观学习</a> 了解基本电力系统的运行知识这次实习，加深了我对电厂及相关行业的了解，并对厂内设备有了一个初步的认识，使我熟悉了热能工程专业相关企业的主要热力系统、设备技术特点及布置，为工作奠定了必要的基础。</li>                     
                     </ul>
                 </div>
             </div>
