--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 </aside>
 <main>
-    <section id="info">
+    <section class="content-d" id="info">
         <div class="wrap">
             <h2 class="title">个人资料</h2>
             <div class="row">
@@ -50,7 +50,7 @@
             </div>
         </div>
     </section>
-    <section id="hobby">
+    <section class="content-d" id="hobby">
         <div class="wrap">
             <h2 class="title">兴趣爱好</h2>
             <div class="row scrollable">
@@ -84,7 +84,7 @@
             </div>
         </div>
     </section>
-    <section id="certificates">
+    <section class="content-d" id="certificates">
         <div class="wrap">
             <h2 class="title">荣誉奖项</h2>
             <div class="row">
