--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             </div>
         </div>
     </section>
-    <section class="content-d" id="hobby">
+    <section  id="hobby">
         <div class="wrap">
             <h2 class="title">兴趣爱好</h2>
             <div class="row scrollable">
                 <div class="col-s-6 col-m-4 center-fixed">
                     <div class="skills-icon">
-                        <i class="fa fa-html5"></i>
+                        <i class="fas fa-dumbbell"></i>
                     </div>
                     <div class="skills-title">
                         <h3>运动</h3>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col-s-6 col-m-4 center-fixed">
                     <div class="skills-icon">
-                        <i class="fa fa-css3"></i>
+                        <i class="fa fa-book"></i>
                     </div>
                     <div class="skills-title">
                         <h3>阅读</h3>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-s-6 col-m-4 center-fixed">
                     <div class="skills-icon">
-                        <i class="fa fa-code"></i>
+                        <i class="fas fa-user-friends"></i>
                     </div>
                     <div class="skills-title">
                         <h3>交友</h3>
@@ -84,14 +84,14 @@
             </div>
         </div>
     </section>
-    <section class="content-d" id="certificates">
+    <section  id="certificates">
         <div class="wrap">
             <h2 class="title">荣誉奖项</h2>
             <div class="row">
                 <div class="col-s-6">
                     <div class="works-item">
                         <!---可插img--->
-                        <p>计算机二级（MS- office）</p>
+                        <p>计算机二级（MS-office）</p>
                     </div>
                 </div>
                 <div class="col-s-6">
@@ -110,14 +110,14 @@
                     </div>
                 </div>
                 <div class="col-s-6">
-                    <div class="works-item
+                    <div class="works-item">
                         <p>实用新型专利证书</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="content-d" id="story">
+    <section  id="story">
         <div class="wrap">
             <h2 class="title">个人经历</h2>
             <div class="row">
