--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="row scrollable">
                 <div class="col-s-6 col-m-4 center-fixed">
                     <div class="skills-icon">
-                        <i class="fas fa-dumbbell"></i>
+                        <i class="fa fa-futbol-o"></i>
                     </div>
                     <div class="skills-title">
                         <h3>运动</h3>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-s-6 col-m-4 center-fixed">
                     <div class="skills-icon">
-                        <i class="fas fa-user-friends"></i>
+                        <i class="fa fa-street-view"></i>
                     </div>
                     <div class="skills-title">
                         <h3>交友</h3>
