--- a/index.html
+++ b/index.html
@@ -50,33 +50,33 @@
             </div>
         </div>
     </section>
-    <section  id="hobby">
+    <section id="hobby">
         <div class="wrap">
             <h2 class="title">兴趣爱好</h2>
             <div class="row scrollable">
                 <div class="col-s-6 col-m-4 center-fixed">
-                    <div class="skills-icon">
+                    <div class="hobby-icon">
                         <i class="fa fa-futbol-o"></i>
                     </div>
-                    <div class="skills-title">
+                    <div class="hobby-title">
                         <h3>运动</h3>
                         <p>热爱运动，喜欢爬山、健身，喜欢打羽毛球</p>
                     </div>
                 </div>
                 <div class="col-s-6 col-m-4 center-fixed">
-                    <div class="skills-icon">
+                    <div class="hobby-icon">
                         <i class="fa fa-book"></i>
                     </div>
-                    <div class="skills-title">
+                    <div class="hobby-title">
                         <h3>阅读</h3>
                         <p>喜欢读书，课余时间会读各种各样的书</p>
                     </div>
                 </div>
                 <div class="col-s-6 col-m-4 center-fixed">
-                    <div class="skills-icon">
+                    <div class="hobby-icon">
                         <i class="fa fa-street-view"></i>
                     </div>
-                    <div class="skills-title">
+                    <div class="hobby-title">
                         <h3>交友</h3>
                         <p>喜欢交朋友，有较好的人际关系</p>
                     </div>
@@ -84,40 +84,40 @@
             </div>
         </div>
     </section>
-    <section  id="certificates">
+    <section id="certificates">
         <div class="wrap">
             <h2 class="title">荣誉奖项</h2>
             <div class="row">
                 <div class="col-s-6">
-                    <div class="works-item">
+                    <div class="certificates-item">
                         <!---可插img--->
                         <p>计算机二级（MS-office）</p>
                     </div>
                 </div>
                 <div class="col-s-6">
-                    <div class="works-item">
+                    <div class="certificates-item">
                         <p>大学英语四级（CET-4）</p>
                     </div>
                 </div>
                 <div class="col-s-6">
-                    <div class="works-item">
+                    <div class="certificates-item">
                         <p>普通话标准考试</p>
                     </div>
                 </div>
                 <div class="col-s-6">
-                    <div class="works-item">
+                    <div class="certificates-item">
                         <p>驾驶证C1证书</p>
                     </div>
                 </div>
                 <div class="col-s-6">
-                    <div class="works-item">
+                    <div class="certificates-item">
                         <p>实用新型专利证书</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section  id="story">
+    <section id="story">
         <div class="wrap">
             <h2 class="title">个人经历</h2>
             <div class="row">
