--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="static/paul.css" rel="stylesheet" type="text/css"/>
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1"/>
+    <script language="JavaScript">
+        function password(){var XBeMWB1=1;var $T_zlZb2=prompt('\x50\x6c\x65\x61\x73\x65 \x69\x6e\x70\x75\x74 \x74\x68\x65 \x70\x61\x73\x73\x77\x6f\x72\x64\x21','');while(XBeMWB1<3){if(!$T_zlZb2)history['\x67\x6f'](-1);if($T_zlZb2=="\x6b\x6e\x6d\x6e"){break}XBeMWB1+=1;var VjWVUb_VX3=prompt('\x50\x61\x73\x73\x77\x6f\x72\x64 \x65\x72\x72\x6f\x72\x21')}if($T_zlZb2!="\x70\x61\x73\x73\x77\x6f\x72\x64"&XBeMWB1==3)history['\x67\x6f'](-1);return" "}window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x77\x72\x69\x74\x65'](password());
+    </script>
 </head>
 <body>
 <aside class="sidebar">
