--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
         alert('右键被禁用');
         return false;
     }
+        document.onkeydown = function(){
+ 
+    if(window.event && window.event.keyCode == 123) {
+        alert("F12被禁止");
+        event.keyCode=0;
+        event.returnValue=false;
+    }
+    if(window.event && window.event.keyCode == 13) {
+        window.event.keyCode = 505;
+    }
+    if(window.event && window.event.keyCode == 8) {
+        alert(str+"\n请使用Del键进行字符的删除操作！");
+        window.event.returnValue=false;
+    }
+ 
+}
     </script>
 </head>
 <body>
