--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 </div>
                 <div class="col-l-4">
                     <p>QQ：773481353</p>
-                    <p>手机：18434186078</p>
-                    <p>网站：<a href="https://fsj.one">https://fsj.one</a></p>
+                    <p>手机：184 3418 6078</p>
+                    <p>网站：<a href="https://fsj.one">fsj.one</a></p>
                     <p>邮箱：<a href="mailto:i@fsj.one">i@fsj.one</a></p>
                 </div>
                 <div class="col-l-4">
