--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
     </section>
     <footer>
-        <p>© 2020 By <a href="https://fsj.one/" title="冯少杰简历网站" target="_blank">FSJ</a>.</p>
+        <p>© 2020 <a href="https://fsj.one/" title="冯少杰简历网站" target="_blank">FSJ</a>.</p>
     </footer>
 </main>
 
