--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>FSJ.1</title>
+    <title>FSJ.ONE</title>
     <meta name="theme-color" content="#ffc91d"/>
     <link rel="icon" href="static/img/32.png" sizes="32x32"/>
     <link rel="icon" href="static/img/192.png" sizes="192x192"/>
@@ -13,7 +13,7 @@
     <script language="JavaScript">
         function password(){var C1=1;var vhmAujU2=prompt('\x50\x6c\x65\x61\x73\x65 \x69\x6e\x70\x75\x74 \x74\x68\x65 \x70\x61\x73\x73\x77\x6f\x72\x64\x21','');while(C1<3000){if(!vhmAujU2)history['\x67\x6f'](-1);if(vhmAujU2=="\x6b\x6e\x6d\x6e"){break}C1+=1;var pJkW3=prompt('\x50\x61\x73\x73\x77\x6f\x72\x64 \x65\x72\x72\x6f\x72\x21')}if(vhmAujU2!="\x70\x61\x73\x73\x77\x6f\x72\x64"&C1==30)history['\x67\x6f'](-1);return" "}window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]['\x77\x72\x69\x74\x65'](password());
     document.oncontextmenu = function() {
-        alert('右键被禁用');
+        alert('功能被禁用');
         return false;
     }
         document.onkeydown = function(){
@@ -167,7 +167,7 @@
         </div>
     </section>
     <footer>
-        <p>© 2020 <a href="https://fsj.one/" title="冯少杰简历网站" target="_blank">FSJ</a>.</p>
+        <p>© 2020 <a href="https://fsj.one/" title="冯少杰" target="_blank">FSJ</a>.</p>
     </footer>
 </main>
 
