--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="col-l-4">
                     <p>QQ：773481353</p>
                     <p>手机：184 3418 6078</p>
-                    <p>网站：<a href="https://fsj.one">fsj.one</a></p>
+                    <p>网站：<a href="//fsj.one">fsj.one</a></p>
                     <p>邮箱：<a href="mailto:i@fsj.one">i@fsj.one</a></p>
                 </div>
                 <div class="col-l-4">
@@ -167,7 +167,7 @@
         </div>
     </section>
     <footer>
-        <p>© 2020 <a href="https://fsj.one/" title="冯少杰" target="_blank">FSJ</a>.</p>
+        <p>© 2020 <a href="//fsj.one/" title="冯少杰" target="_blank">FSJ</a>.</p>
     </footer>
 </main>
 
